Fix seal block header height to allow for text wrapping

--- a/app/assets/stylesheets/components/officialness/_fr_box.scss
+++ b/app/assets/stylesheets/components/officialness/_fr_box.scss
@@ -21,7 +21,6 @@ Styleguide 1.1 FR Boxes
   > .fr-seal-block {
     h6, span.h6 {
       background-color: $main-color;
-      height: 18px;
       padding-top: 1px;
     }
 
